frei0r: fix nicknames for color and position properties

https://bugzilla.gnome.org/show_bug.cgi?id=695884