gst/frei0r/gstfrei0r.c
@@ -152,7 +152,7 @@ gst_frei0r_klass_install_properties (GObjectClass * gobject_class,
         prop_name_full = g_strconcat (prop_name, "-g", NULL);
         prop_nick_full = g_strconcat (param_info->name, "-G", NULL);
         g_object_class_install_property (gobject_class, count++,
-            g_param_spec_float (prop_name_full, param_info->name,
+            g_param_spec_float (prop_name_full, prop_nick_full,
                 param_info->explanation, 0.0, 1.0, def,
                 G_PARAM_READWRITE | GST_PARAM_CONTROLLABLE));
         g_free (prop_name_full);
@@ -165,7 +165,7 @@ gst_frei0r_klass_install_properties (GObjectClass * gobject_class,
         prop_name_full = g_strconcat (prop_name, "-b", NULL);
         prop_nick_full = g_strconcat (param_info->name, "-B", NULL);
         g_object_class_install_property (gobject_class, count++,
-            g_param_spec_float (prop_name_full, param_info->name,
+            g_param_spec_float (prop_name_full, prop_nick_full,
                 param_info->explanation, 0.0, 1.0, def,
                 G_PARAM_READWRITE | GST_PARAM_CONTROLLABLE));
         g_free (prop_name_full);
@@ -186,7 +186,7 @@ gst_frei0r_klass_install_properties (GObjectClass * gobject_class,
         prop_name_full = g_strconcat (prop_name, "-x", NULL);
         prop_nick_full = g_strconcat (param_info->name, "-X", NULL);
         g_object_class_install_property (gobject_class, count++,
-            g_param_spec_double (prop_name_full, param_info->name,
+            g_param_spec_double (prop_name_full, prop_nick_full,
                 param_info->explanation, 0.0, 1.0, def,
                 G_PARAM_READWRITE | GST_PARAM_CONTROLLABLE));
         g_free (prop_name_full);
@@ -199,7 +199,7 @@ gst_frei0r_klass_install_properties (GObjectClass * gobject_class,
         prop_name_full = g_strconcat (prop_name, "-Y", NULL);
         prop_nick_full = g_strconcat (param_info->name, "-X", NULL);
         g_object_class_install_property (gobject_class, count++,
-            g_param_spec_double (prop_name_full, param_info->name,
+            g_param_spec_double (prop_name_full, prop_nick_full,
                 param_info->explanation, 0.0, 1.0, def,
                 G_PARAM_READWRITE | GST_PARAM_CONTROLLABLE));
         g_free (prop_name_full);
